--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.2",
+    "dayjs": "^1.11.10",
+    "export-to-csv": "^1.2.4",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
